force-app/main/default/objects/Abatement_Strategies__c/Abatement_Strategies__c.object-meta.xml
<CustomObject>
    <label>Abatement Strategies</label>
    <nameField>
        <displayFormat>AS-{0}</displayFormat>
        <label>Abatement Strategies Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Abatement Strategies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>