force-app/main/default/objects/Abatement_Strategies__c/fields/Approved_Abatement_Strategies__c.field-meta.xml
<CustomField>
    <fullName>Approved_Abatement_Strategies__c</fullName>
    <label>Approved Abatement Strategies</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A.1 Expand access to all FDA-approved forms of Medication-Assisted Treatment (MAT) for OUD and co-occurring SUD/MH conditions</fullName>
            </value>
            <value>
                <fullName>A.2 Reimburse evidence-based services that follow the ASAM continuum of care</fullName>
            </value>
            <value>
                <fullName>A.3 Expand telehealth for MAT, counseling, psychiatric, and recovery services</fullName>
            </value>
            <value>
                <fullName>A.4 Improve oversight of Opioid Treatment Programs (OTPs) to ensure evidence-based practices</fullName>
            </value>
            <value>
                <fullName>A.5 Support mobile intervention, treatment, and recovery services, including peer recovery coaches</fullName>
            </value>
            <value>
                <fullName>A.6 Provide trauma treatment for individuals with OUD and affected family members, train healthcare personnel</fullName>
            </value>
            <value>
                <fullName>A.7 Support evidence-based withdrawal management services</fullName>
            </value>
            <value>
                <fullName>Provide MAT training for providers, responders, and support professionals, include tele-mentoring</fullName>
            </value>
            <value>
                <fullName>A.9 Support workforce development for addiction professionals</fullName>
            </value>
            <value>
                <fullName>A.10 Offer fellowships for addiction medicine specialists in care, teaching, and research</fullName>
            </value>
            <value>
                <fullName>A.11 Provide scholarships, fellowships, and incentives for behavioral health professionals, especially in underserved areas</fullName>
            </value>
            <value>
                <fullName>A.12 Fund DATA 2000 waiver training and support for MAT prescribers</fullName>
            </value>
            <value>
                <fullName>A.13 Disseminate web-based training such as PCSS-Opioids and motivational interviewing</fullName>
            </value>
            <value>
                <fullName>A.14 Develop and share new training curricula, like those from PCSS-MAT</fullName>
            </value>
            <value>
                <fullName>B.1 Provide comprehensive wrap-around services including housing, transport, education, job placement, and childcare</fullName>
            </value>
            <value>
                <fullName>B.2 Offer the full continuum of care including supportive housing, peer support, case management, and community navigation</fullName>
            </value>
            <value>
                <fullName>B.3 Provide counseling, peer recovery, and access to MAT in residential treatment</fullName>
            </value>
            <value>
                <fullName>B.4 Expand access to housing options including recovery housing that integrates MAT</fullName>
            </value>
            <value>
                <fullName>B.5 Provide community legal and social services to deinstitutionalize individuals</fullName>
            </value>
            <value>
                <fullName>B.6 Support or expand peer recovery centers offering diverse services</fullName>
            </value>
            <value>
                <fullName>B.7 Offer or support transportation to treatment and recovery services</fullName>
            </value>
            <value>
                <fullName>B.8 Provide employment training and educational opportunities for individuals in treatment or recovery</fullName>
            </value>
            <value>
                <fullName>B.9 Identify, support, and replicate successful recovery programs (e.g., for physicians, pilots, college students)</fullName>
            </value>
            <value>
                <fullName>B.10 Engage nonprofits, faith-based organizations, and coalitions in family and recovery support</fullName>
            </value>
            <value>
                <fullName>B.11 Train government staff to serve people in recovery without stigma</fullName>
            </value>
            <value>
                <fullName>B.12 Promote stigma reduction campaigns for effective treatment and recovery support</fullName>
            </value>
            <value>
                <fullName>B.13 Create culturally appropriate services for diverse communities including immigrants</fullName>
            </value>
            <value>
                <fullName>B.15 Hire or train behavioral health workers to provide or expand recovery services</fullName>
            </value>
            <value>
                <fullName>C.1 Ensure providers screen for OUD and refer or treat accordingly</fullName>
            </value>
            <value>
                <fullName>C.2 Fund SBIRT services including for uninsured pregnant women</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>