force-app/main/default/objects/Abatement_Strategies__c/fields/ApprovedUses__c.field-meta.xml
<CustomField>
    <fullName>ApprovedUses__c</fullName>
    <label>Approved Uses</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A. Treat Opioid Use Disorder (OUD)</fullName>
            </value>
            <value>
                <fullName>B. Support People in Treatment and Recovery</fullName>
            </value>
            <value>
                <fullName>C. Connect People Who Need Help to the Help They Need (Connections to Care)</fullName>
            </value>
            <value>
                <fullName>D. Address the Needs of Criminal Justice-Involved Persons</fullName>
            </value>
            <value>
                <fullName>E. Address the Needs of Pregnant or Parenting Women and Their Families, including Babies with Neonatal Abstinence Syndrome (NAS).</fullName>
            </value>
            <value>
                <fullName>F. Prevent Over-Prescribing and Ensure Appropriate Prescribing and Dispensing of Opioids</fullName>
            </value>
            <value>
                <fullName>G. Prevent Misuse of Opioids</fullName>
            </value>
            <value>
                <fullName>H. Prevent Overdose Deaths and Other Harms (Harm Reduction)</fullName>
            </value>
            <value>
                <fullName>I. First Responders</fullName>
            </value>
            <value>
                <fullName>J Leadership, Planning, and Coordination</fullName>
            </value>
            <value>
                <fullName>K. Training</fullName>
            </value>
            <value>
                <fullName>L. Research</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>