force-app/main/default/objects/Abatement_Strategies__c/fields/Core_Abatement_Strategies__c.field-meta.xml
<CustomField>
    <fullName>Core_Abatement_Strategies__c</fullName>
    <label>Core Abatement Strategies</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A.1: Expand training for first responders, schools, community support groups, and families.</fullName>
            </value>
            <value>
                <fullName>A.2: Increase distribution to individuals who are uninsured or whose insurance does not cover the needed service</fullName>
            </value>
            <value>
                <fullName>B.1: Increase distribution of MAT to individuals who are uninsured or whose insurance does not cover the needed service</fullName>
            </value>
            <value>
                <fullName>B.2: Provide education to school-based and youth-focused programs that discourage or prevent misuse</fullName>
            </value>
            <value>
                <fullName>B.3: Provide MAT education and awareness training to healthcare providers, EMTs, law enforcement, and other first responders</fullName>
            </value>
            <value>
                <fullName>B.4: Provide treatment and recovery support services, including residential and inpatient treatment, intensive outpatient treatment, outpatient therapy or counseling, and recovery housing.</fullName>
            </value>
            <value>
                <fullName>C.1: Expand Screening, Brief Intervention, and Referral to Treatment (SBIRT) services to non-Medicaid eligible or uninsured pregnant women</fullName>
            </value>
            <value>
                <fullName>C.2: Expand comprehensive evidence-based treatment and recovery services for women with co-occurring Opioid Use Disorder (OUD) and other Substance Use Disorder (SUD)/Mental Health disorders for uninsured individuals for up to 12 months postpartum</fullName>
            </value>
            <value>
                <fullName>C.3: Provide comprehensive wrap-around services to individuals with OUD, including housing, transportation, job placement/training, and childcare</fullName>
            </value>
            <value>
                <fullName>D.1: Expand comprehensive evidence-based and recovery support for NAS babies</fullName>
            </value>
            <value>
                <fullName>D.2: Expand services for a better continuum of care with infant-need dyad</fullName>
            </value>
            <value>
                <fullName>D.3: Expand long-term treatment and services for medical monitoring of NAS babies and their families</fullName>
            </value>
            <value>
                <fullName>E.1: Expand services, such as navigators and on-call teams to begin MAT in hospital emergency departments</fullName>
            </value>
            <value>
                <fullName>E.2: Expand warm hand-off services to transition to recovery services</fullName>
            </value>
            <value>
                <fullName>E.3: Broaden the scope of recovery services to include co-occurring SUD or mental health conditions</fullName>
            </value>
            <value>
                <fullName>E.4: Provide comprehensive wrap-around services to individuals in recovery, including housing, transportation, job placement/training, and childcare</fullName>
            </value>
            <value>
                <fullName>E.5: Hire additional social workers or other behavioral health workers to facilitate the expansions of warm handoff programs and recovery services</fullName>
            </value>
            <value>
                <fullName>F.1: Provide evidence-based treatment and recovery support, including MAT for persons with OUD and co-occurring SUD/MH disorders within and transitioning out of the criminal justice system</fullName>
            </value>
            <value>
                <fullName>F.2: Increase funding for jails to provide treatment to inmates with OUD</fullName>
            </value>
            <value>
                <fullName>G.1: Funding for media campaigns to prevent opioid use (similar to the FDA’s “Real Cost” campaign to prevent youth from misusing tobacco)</fullName>
            </value>
            <value>
                <fullName>G.2: Funding for evidence-based prevention programs in schools</fullName>
            </value>
            <value>
                <fullName>G.3: Funding for medical provider education and outreach regarding best prescribing practices for opioids consistent with the 2016 CDC guidelines, including providers at hospitals (academic detailing)</fullName>
            </value>
            <value>
                <fullName>G.4: Funding for community drug disposal programs</fullName>
            </value>
            <value>
                <fullName>G.5: Funding and training for first responders to participate in pre-arrest diversion programs, post-overdose response teams, or similar strategies that connect at-risk individuals to behavioral health services and supports</fullName>
            </value>
            <value>
                <fullName>H.1: Provide comprehensive syringe services programs with more wrap-around services, including linkage to OUD treatment, access to sterile syringes, and linkage to care and treatment of infectious diseases</fullName>
            </value>
            <value>
                <fullName>I.1: Evidence-Based Data Collection and Research Analyzing the Effectiveness of the Abatement Strategies within the State</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>