force-app/main/default/objects/Abatement_Strategies__c/fields/CoreStrategies__c.field-meta.xml
<CustomField>
    <fullName>CoreStrategies__c</fullName>
    <label>Core Strategies</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A: Naloxone or Other FDA-Approved Drug to Reverse Opioid Overdoses</fullName>
            </value>
            <value>
                <fullName>B: Medication-Assisted Treatment (MAT) Distribution and Other Opioid-Related Treatment</fullName>
            </value>
            <value>
                <fullName>C: Pregnant and Postpartum Women</fullName>
            </value>
            <value>
                <fullName>D: Expanding Treatment for Neonatal Abstinence Syndrome (NAS)</fullName>
            </value>
            <value>
                <fullName>E: Expansion of Warm Handoff Programs and Recovery Services</fullName>
            </value>
            <value>
                <fullName>F: Treatment for Incarcerated Population</fullName>
            </value>
            <value>
                <fullName>G: Prevention Programs</fullName>
            </value>
            <value>
                <fullName>H: Expanding Syringe Service Programs</fullName>
            </value>
            <value>
                <fullName>I: Evidence-Based Data Collection and Research Analyzing the Effectiveness of the Abatement Strategies within the State</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>