force-app/main/default/objects/Abatement_Strategies__c/fields/Describe_Current_Budget_and_Funding_Sour__c.field-meta.xml
<CustomField>
    <fullName>Describe_Current_Budget_and_Funding_Sour__c</fullName>
    <label>Describe Current Budget and Funding Sour</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>