force-app/main/default/objects/Abatement_Strategies__c/fields/Funding_Application__c.field-meta.xml
<CustomField>
    <fullName>Funding_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Application</label>
    <referenceTo>Funding_Application__c</referenceTo>
    <relationshipLabel>Abatement Strategies</relationshipLabel>
    <relationshipName>Abatement_Strategies</relationshipName>
    <type>Lookup</type>
</CustomField>