force-app/main/default/objects/Abatement_Strategies__c/fields/GeographicAreaPopulationPoverty__c.field-meta.xml
<CustomField>
    <fullName>GeographicAreaPopulationPoverty__c</fullName>
    <label>Geographic Area, Population, Poverty</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>