force-app/main/default/objects/Abatement_Strategies__c/fields/Outline_Existing_Efforts_and_New_Expansi__c.field-meta.xml
<CustomField>
    <fullName>Outline_Existing_Efforts_and_New_Expansi__c</fullName>
    <label>Outline Existing Efforts and New Expansi</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>