force-app/main/default/objects/Abatement_Strategies__c/fields/PartnerName__c.field-meta.xml
<CustomField>
    <fullName>PartnerName__c</fullName>
    <label>Partner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>